tests/paczka1/fuzzy1/94457666.err
Error in line 2: V4meYGA A320 5,3
Error in line 7: ki8hSwd AI20 92,9
Error in line 13: ki8hSwd A320 458,9
Error in line 25: n4lD A320 56,6
Error in line 35: V4meYGA A26 44,0
